syntax = "proto3";

option go_package = "./proto";

package proto; 

service Appointment{
    rpc GetAppointment(Id) returns (Request){}
    rpc NewAppointment(Request) returns (Id){}
}

message Id {
    int32 id = 1; 
}

message Request{
    string resourceType = 1;
    Text text = 2;
    repeated Identifier identifier = 3; 
    int64 priority = 4; 
}

message Text{
    string status = 1;
    string div = 2; 
}

message Identifier{
    string system = 1;
    string value = 2;
}
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/*.proto